# ticket-forecasting

./: .gitignore  README.md  pyproject.toml
notebooks/: Ticket Forecast - Tensorflow-Batch-by-Game.ipynb  Ticket Forecast - Tensorflow-Batch.ipynb  Ticket Forecast - Tensorflow.ipynb
