[tool]
[tool.pdm]

[project]
name = "Ticket Forecasting"
version = ""
description = "Ticket Forecasting with Tensorflow"
authors = [
    {name = "Jacob Leon", email = ""},
]
dependencies = [
    "notebook>=6.5.2",
    "tensorflow~=2.4",
    "pandas~=1.2.0",
    "SQLAlchemy~=1.3.22",
    "matplotlib~=3.3.3",
    "scikit-learn~=0.24.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
